--- a/src/AlloyDemoKit/AlloyDemoKit.csproj
+++ b/src/AlloyDemoKit/AlloyDemoKit.csproj
@@ -570,6 +570,7 @@
     <Compile Include="Helpers\GeoPosition.cs" />
     <Compile Include="Helpers\HtmlHelpers.cs" />
     <Compile Include="Helpers\UrlHelpers.cs" />
+    <Compile Include="Models\Blocks\AppendixBlock.cs" />
     <Compile Include="Models\Blocks\BlogArchiveBlock.cs" />
     <Compile Include="Models\Blocks\BlogListBlock.cs" />
     <Compile Include="Models\Blocks\ButtonBlock.cs" />
@@ -654,6 +655,7 @@
     <Compile Include="Models\ViewModels\VideoViewModel.cs" />
     <Compile Include="Models\ViewModels\WeatherBlockViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PropertyDefinition\PropertyListBase.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -1039,6 +1041,7 @@
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
+    <Content Include="Views\AppendixBlock\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
       <SubType>Designer</SubType>
@@ -1063,7 +1066,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>0</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:51481/</IISUrl>
+          <IISUrl>http://localhost:53909/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
